--- a/Auto Resizing TableViewCell/Auto Resizing TableViewCell/Cells/ResizableCell.xib
+++ b/Auto Resizing TableViewCell/Auto Resizing TableViewCell/Cells/ResizableCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="154" id="KGk-i7-Jjw" customClass="ResizableCell" customModule="Auto_Resizing_TableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="69" id="KGk-i7-Jjw" customClass="ResizableCell" customModule="Auto_Resizing_TableViewCell" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="69"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="153.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="68.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2I7-k2-rP7">
@@ -26,17 +26,17 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iJE-wH-31S">
-                        <rect key="frame" x="8" y="125" width="304" height="20.5"/>
+                        <rect key="frame" x="8" y="40" width="304" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="iJE-wH-31S" firstAttribute="top" relation="greaterThanOrEqual" secondItem="2I7-k2-rP7" secondAttribute="bottom" constant="8" id="22a-Nh-3xu"/>
                     <constraint firstAttribute="trailing" secondItem="2I7-k2-rP7" secondAttribute="trailing" constant="8" id="Dj1-mq-ouw"/>
                     <constraint firstItem="iJE-wH-31S" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="FO1-aF-F6M"/>
                     <constraint firstItem="2I7-k2-rP7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="HYE-hb-G8K"/>
-                    <constraint firstItem="iJE-wH-31S" firstAttribute="top" relation="greaterThanOrEqual" secondItem="2I7-k2-rP7" secondAttribute="bottom" constant="8" id="KbN-VM-Lj7"/>
                     <constraint firstAttribute="trailing" secondItem="iJE-wH-31S" secondAttribute="trailing" constant="8" id="Lp5-pX-rc9"/>
                     <constraint firstItem="2I7-k2-rP7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="h0t-2s-g2R"/>
                     <constraint firstAttribute="bottom" secondItem="iJE-wH-31S" secondAttribute="bottom" constant="8" id="sft-m5-2SR"/>
@@ -47,7 +47,7 @@
                 <outlet property="authorLabel" destination="iJE-wH-31S" id="j3K-Wi-BDh"/>
                 <outlet property="quoteLabel" destination="2I7-k2-rP7" id="qqq-EJ-f4Z"/>
             </connections>
-            <point key="canvasLocation" x="-46" y="-73"/>
+            <point key="canvasLocation" x="-46" y="-115.5"/>
         </tableViewCell>
     </objects>
 </document>
